# 3D_Invaders

./: .gitignore  CMakeLists.txt  class diagram.txt  test_logs.txt
UnitTests/: ECSTest.cpp  ECSTest.h  TestLogger.h  UnitTester.cpp  UnitTester.h
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: gl.h
lib/imgui/: CMakeLists.txt
lib/imgui/src/: imgui_impl_glfw.cpp
lib/tigl/: CMakeLists.txt  tigl.cpp
lib/tigl/include/: tigl.h
other_code/: CPP_3D_Project.cpp  CompanionCube.cpp  CompanionCube.h  Material.cpp  Material.h  MovingObject.cpp  MovingObject.h  Overlay.cpp  Overlay.h  ProjectTest.cpp  gameObject.cpp  gameObject.h  texture.cpp
resources/spaceship/: asteroid.mtl  lowpoly_spaceship.mtl  mars_planet.mtl  neptune.mtl  sun.mtl
src/: 3D_invaders.cpp  3D_invaders.h  stb_image.h
src/ECS/: CMakeLists.txt  Coordinator.h  EntityManager.h  Types.h
src/ECS/components/: Component.h  Mesh.h  Transform.h
src/ECS/core/: Component.h  Coordinator.h  Entity.cpp  Entity.h  EntityManager.h  LightComponent.h  Material.h  Mesh.h  System.h  SystemManager.cpp  SystemManager.h  TextureComponent.cpp  TextureComponent.h  Transform.h  Types.h
src/ECS/entities/: Entity.h
src/ECS/include/: Entity.h
src/ECS/managers/: EntityManager.h  SystemManager.cpp  SystemManager.h
src/ECS/system/: MoveSystem.cpp  RenderSystem.cpp
src/ECS/system/include/: MoveSystem.h  RenderSystem.h  System.h
src/ECS/systems/: RenderSystem.cpp  RenderSystem.h
src/camera/: fpsCam.cpp  fpsCam.h
src/modelLoader/: ModelLoader.cpp  ModelLoader.h  ObjectLoader.cpp  ObjectLoader.h  Object_loader.cpp  Object_loader.h
src/window/: Window.cpp  Window.h
